--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Runner App</string>
     <string name="google_maps_sdk_key">AIzaSyBCePCRstdXBquF_eehNw6IBWQLJYlWx0k</string>
     <string name="prompt_permissions_needed">You need to provide these permissions to run the app</string>
+    <string name="cancel_run">Cancel run</string>
+    <string name="q_cancel_the_run">Cancel the run?</string>
+    <string name="q_want_to_cancel_run">Do you want to cancel this run? You will lose its data.</string>
     <string-array name="filter_options">
         <item>Date</item>
         <item>Running Time</item>
